# SolarSysteme

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pkg  vite.config.js
.github/workflows/: deploy.yml
shaders/: orbit.frag  orbit.vert  planet.frag  planet.vert  ring.frag  ring.vert  star.frag  star.vert  trail.frag  trail.vert
src/: app.rs  constants.rs  hud.rs  lib.rs  splash.rs
src/data/: mod.rs  solar_system.rs
src/input/: mod.rs
src/renderer/: camera.rs  mesh.rs  mod.rs  render_pass.rs  shader.rs  starfield.rs  texture.rs
src/simulation/: body.rs  mod.rs  orbit.rs  time.rs
www/: bootstrap.js  index.html  style.css
