[package]
name = "solara"
version = "0.1.0"
edition = "2024"
description = "SOLARA — The solar system, forged in Rust, alive in your browser."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
glam = "0.29"
console_error_panic_hook = "0.1"
log = "0.4"
console_log = { version = "1", features = ["color"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    "MouseEvent",
    "WheelEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "KeyboardEvent",
    "EventTarget",
    "AddEventListenerOptions",
    "Performance",
    "console",
    "WebGlTexture",
    "HtmlImageElement",
    "Event",
    "DomTokenList",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "debuginfo"
